# bhw-wp

./: .gitignore  .mcp.json  AUTOMATED_WP_SETUP.sh  CREATE_CF7_FORMS.sh  FINAL_DEPLOYMENT_CHECKLIST.md  NEXT_STEPS.md  PLUGINS_REQUIREMENTS.md  VPS_SETUP_COMMANDS.sh  WORDPRESS_ADMIN_SETUP.md  WORDPRESS_THEME_SETUP.md  docker-compose.yml  pyproject.toml  style.css
.claude/commands/wp/: create-template.md
wp-content/themes/bhw-freight-services/: README.md  footer.php  functions.php  header.php  index.php  style.css
wp-content/themes/bhw-freight-services/assets/css/: components.css  layout.css  responsive.css
wp-content/themes/bhw-freight-services/assets/js/: main.js
wp-content/themes/twentytwentyfour-child/: footer.php  front-page.php  functions.php  header.php  style.css
wp-content/themes/twentytwentyfour-child/css/: reset.css  variables.css
wp-content/themes/twentytwentyfour-child/inc/: custom-post-types.php  enqueue-scripts.php  theme-options.php
wp-content/themes/twentytwentyfour-child/js/: form-handler.js
wp-content/themes/twentytwentyfour-child/template-parts/: hero-banner.php  newsletter.php  quote-form.php  services.php  why-choose-us.php
