[project]
name = "bhw-wp"
version = "0.1.0"
description = ""
authors = [
    {name = "fardilk",email = "fardil.khalidi@gmail.com"}
]
requires-python = "^3.12"
dependencies = [
    "mcp (>=1.1.0)",
    "pyyaml (>=6.0.3,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
